# metaspn-io

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/metaspn_io/: __init__.py  __main__.py  cli.py  ids.py  ingest.py  io_utils.py  models.py  timeutils.py
src/metaspn_io/adapters/: __init__.py  base.py  outcomes_jsonl.py  pumpfun_jsonl.py  registry.py  season1_onchain_jsonl.py  social_jsonl.py  solana_rpc_jsonl.py
tests/: test_cli_smoke.py  test_ids.py  test_ingest.py  test_outcomes_adapter.py  test_season1_adapter.py  test_social_adapter.py  test_timeutils.py  test_token_adapters.py
tests/fixtures/outcomes/: outcomes.jsonl
tests/fixtures/season1/: chain.jsonl  chain_with_issues.jsonl  onchain.jsonl
tests/fixtures/social/: 2026-02-05.jsonl  2026-02-06.jsonl
tests/fixtures/tokens/: pumpfun.jsonl  solana_rpc.jsonl
